<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:orientation="vertical"
    tools:context="com.eemf.sirgoingfar.tic_tac_toe.Activity.BoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.2"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/playerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player 1"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/playerOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VS"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:paddingRight="20dp"
            android:layout_marginTop="1dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/playerTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:paddingRight="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/playerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player 2"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_layer_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_1"
                    style="@style/board_button"/>

                <TextView
                    android:id="@+id/btn_2"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_3"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_4"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_5"
                    style="@style/board_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_layer_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_6"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_7"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_8"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_9"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_10"
                    style="@style/board_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_layer_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_11"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_12"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_13"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_14"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_15"
                    style="@style/board_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_layer_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_16"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_17"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_18"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_19"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_20"
                    style="@style/board_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_layer_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_21"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_22"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_23"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_24"
                    style="@style/board_button" />

                <TextView
                    android:id="@+id/btn_25"
                    style="@style/board_button" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/reset_btn"
            android:layout_weight="2"
            style="@style/Button2"
            android:text="@string/reset_board"/>

        <Button
            android:id="@+id/home_btn"
            android:layout_weight="1"
            style="@style/Button2"
            android:text="@string/home_board"/>

        <Button
            android:id="@+id/restart_btn"
            android:layout_weight="2"
             android:text="@string/restart_game"
            style="@style/Button2"/>
    </LinearLayout>

    </LinearLayout>
